--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -16,7 +16,7 @@
     <div class="col-md-10">
         <div class="row">
             <div class="col-md-12">
-                <h1>Holdings</h1>
+                <h1>{% if account %}Holdings for {{ account.name }}{% else %}Holdings{% endif %}</h1>
                 <p class="lead">Detailed view of all your holdings.</p>
 
                 <a href="{% url 'portfolio:dashboard' %}" class="btn btn-secondary mb-3">← Back to Dashboard</a>
