--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'portfolio:dashboard' %}">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'portfolio:target_allocations' %}">Allocations</a>
+          </li>
         </ul>
         <ul class="navbar-nav">
           {% if user.is_authenticated %}
